[project]
name = "threatx-api-client"
version = "1.6.0"
description = "A client library for the ThreatX API"
authors = [
    {name = "Nikita Ratskov", email = "nikita.ratskov@threatx.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
dependencies = [
    "aiohttp (>=3.9)"
]
requires-python = "^3.8"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.2"
coverage = "^7.3.1"

[tool.poetry.group.release.dependencies]
python-semantic-release = "^9.8.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["threatx_api_client", "tests"]
lint.select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "PERF",
    "PL",
    "RUF",
    "UP"
]
lint.ignore = [
    "E501",
    "D100",
    "D102",
    "D104"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",

]
major_on_zero = false
branch = "main"
build_command = "poetry run ruff check"
